<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myappview.viewpager.Tab1">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageViewSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:src="@drawable/sign_a"/>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            app:columnCount="4"
            app:rowCount="4">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonCC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/buttonGG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gg"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ii"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonII"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/l"
                app:layout_column="2"
                app:layout_row="3" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                app:layout_column="3"
                app:layout_row="3" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>

</FrameLayout>