<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myappview.viewpager.Tab3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageViewSignTab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:src="@drawable/sign_0" />

        <androidx.gridlayout.widget.GridLayout
            app:columnCount="4"
            app:rowCount="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                app:layout_column="1"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                app:layout_column="2"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                app:layout_column="3"
                app:layout_row="0" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                app:layout_column="2"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                app:layout_column="2"
                app:layout_row="2" />

            <Button
                android:id="@+id/button100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                app:layout_column="3"
                app:layout_row="2" />

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</FrameLayout>