<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myappview.viewpager.Tab2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageViewSignTab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:src="@drawable/sign_n" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:columnCount="4"
                app:rowCount="4">

                <Button
                    android:id="@+id/buttonN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n"
                    app:layout_column="0"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/buttonO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o"
                    app:layout_column="1"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/buttonOO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oo"
                    app:layout_column="2"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/buttonP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p"
                    app:layout_column="3"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/buttonR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r"
                    app:layout_column="0"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/buttonS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    app:layout_column="1"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/buttonSS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ss"
                    app:layout_column="2"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/buttonT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t"
                    app:layout_column="3"
                    app:layout_row="1" />

                <Button
                    android:id="@+id/buttonU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/u"
                    app:layout_column="0"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/buttonUU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uu"
                    app:layout_column="1"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/buttonV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/v"
                    app:layout_column="2"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/buttonY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y"
                    app:layout_column="3"
                    app:layout_row="2" />

                <Button
                    android:id="@+id/buttonZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z"
                    app:layout_column="0"
                    app:layout_row="3" />

            </androidx.gridlayout.widget.GridLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>